# webscraping

carprice/: .pdm.toml  1043.json  README.md  allcars.json  cars.json  driveway.json  drivewayoutput.json  output.json  peddleoutput.json  pyproject.toml  run.sh  scrapy.cfg  shift.json  test_json.json
carprice/carprice/: items.py  middlewares.py  pipelines.py  settings.py
carprice/carprice/spiders/: allcars.py  cargurus_spiders.py  cars.py  driveway.py  driveway_spiders.py  edmunds.py  fo.json  peddle_spiders.py  reqesttest.py  shift.py  test.py  truecar.py  vroom.py
