[tool.pdm]

[project]
name = "carprice"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohideen Abdul Khadir", email = "mohideen.ak@1tx.io"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
